--- a/index.html
+++ b/index.html
@@ -5,16 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Chef Vitor</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=League+Gothic&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 </head>
 <body>
+
+    <header>
+        <h1 >VITOR RIOS</h1>
+        <span id="subtitle">Chef</span>
+        <a href="#">
+            <span class="material-symbols-outlined">
+                restaurant_menu
+            </span>
+                Saiba Mais
+        </a>
+    </header>
     
+
     
-    <h1 >VITOR RIOS</h1>
-    <span>Chef</span>
-    <a href="#">Saiba Mais</a>
-
-
-
+   
 </body>
 </html>
