Melhorias css e adição segunda pag

--- a/index.html
+++ b/index.html
@@ -14,18 +14,27 @@
 <body>
 
     <header>
-        <h1 >VITOR RIOS</h1>
+        <h1>CUCA`S KITCHEN  </h1>
         <span id="subtitle">Chef</span>
-        <a href="#">
+        <a class="botao" href="#secao-apresentacao">
             <span class="material-symbols-outlined">
                 restaurant_menu
             </span>
+            <span>
                 Saiba Mais
+            </span>
         </a>
     </header>
-    
 
-    
+
+    <section id="secao-apresentacao">
+        <img id="avatar" src="./assets/images/perfil.png" alt="Foto de Vitor">
+        <div>
+        <h2>APRENDENDO A PROGRAMAR</h2>
+        <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</p>
+        <a class="botao" href="#">conheça os projetos</a>
+    </div>
+    </section>
    
 </body>
 </html>
