--- a/index.html
+++ b/index.html
@@ -35,6 +35,49 @@
         <a class="botao" href="#">conheça os projetos</a>
     </div>
     </section>
+
+    <section id="secao-projetos">
+        <ul>
+        </div>
+            <li>
+                <div class="card">
+                    <div class="image-wrapper">
+                        <img src="https://images.unsplash.com/photo-1616169776580-c86189ee67b8?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h2>Titulo</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, nulla!</p>
+                    </div>
+            </li>
+            <li>
+                <div class="card">
+                    <div class="card">
+                        <div class="image-wrapper">
+                            <img src="https://images.unsplash.com/photo-1616169776580-c86189ee67b8?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                        </div>
+                        <div class="card-text">
+                            <h2>Titulo</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, nulla!</p>
+                        </div>
+                </div>
+            
+            </li>
+            <li>
+                <div class="card">
+                    <div class="card">
+                        <div class="image-wrapper">
+                            <img src="https://images.unsplash.com/photo-1616169776580-c86189ee67b8?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                        </div>
+                        <div class="card-text">
+                            <h2>Titulo</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, nulla!</p>
+                        </div>
+                </div>
+            </li>
+        </ul>
+
+    </section>
+
    
 </body>
 </html>
